apps/uptime-kuma/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`status.felipecisotto.com.br`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
  tls:
    secretName: certificates
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: uptime-kuma-path-rewrite
  namespace: apps
spec:
  stripPrefix:
    prefixes:
      - "/status"
